--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/index.html",
   "dependencies": {
     "axios": "^0.18.0",
+    "express": "^4.16.3",
+    "express-ws": "^4.0.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "react": "^16.5.2",
@@ -13,13 +15,16 @@
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "concurrently": "^4.0.1",
     "parcel-bundler": "^1.9.7"
   },
   "scripts": {
-    "start": "parcel ./src/index.html"
+    "server": "nodemon ./server/index.js",
+    "client": "parcel ./src/index.html",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "proxy": "api.exampple.com"
+  "proxy": "localhost:5000"
 }
