--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "express": "^4.16.3",
     "express-ws": "^4.0.0",
     "jquery": "^3.3.1",
+    "mstats": "^1.0.1",
     "popper.js": "^1.14.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   },
