--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "concurrently": "^4.0.1",
