--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.html",
   "dependencies": {
     "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "express-ws": "^4.0.0",
     "jquery": "^3.3.1",
@@ -14,8 +15,10 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
+    "request": "^2.88.0",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "x-ray": "^2.3.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
