--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "request": "^2.88.0",
+    "request-x-ray": "^0.1.4",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
     "x-ray": "^2.3.3"
