--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
+    "cloudscraper": "^1.5.0",
     "express": "^4.16.3",
     "express-ws": "^4.0.0",
     "jquery": "^3.3.1",
